<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.saperiumdev.samplescheduledinspection.inspection.inspection.InspectionActivity"
    tools:showIn="@layout/app_bar_schedule_inspection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="309dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/scheduledInspectionFrontlines"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/frontlinesCountEdit"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="307dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/scheduledInspectionFreshtrades"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/freshtradeCountEdit"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="openSchedule">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/scheduledInspectionSchedule"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/scheduledInspectionSnapshots"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:minHeight="250dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/notesEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/scheduledInspectionNotesHint"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/scheduledInspectionSave"
            android:textColor="@android:color/white"
            android:enabled="false"
            android:onClick="onSaveClick" />
    </LinearLayout>

</RelativeLayout>
